# Simple-simulated-inkjet-printing-program

./: README.md
server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
www/: CMakeLists.txt  bin.cpp  bin.h  bin.ui  convertfile.cpp  convertfile.h  image.qrc  inkjet.cpp  inkjet.h  linklist.cpp  linklist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pdfrenderer.cpp  pdfrenderer.h  photoalbum.cpp  photoalbum.h  photoalbum.ui  print.cpp  print.h  print.ui  printrecord.cpp  printrecord.h  printrecord.ui  printworkflow.cpp  printworkflow.h  tcp.cpp  tcp.h  www_zh_CN.ts
